--- a/index.html
+++ b/index.html
@@ -2,149 +2,48 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>العروض الحالية</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>العروض</title>
 
-<!-- OneSignal -->
 <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+
 <script>
 window.OneSignalDeferred = window.OneSignalDeferred || [];
-OneSignalDeferred.push(async function(OneSignal) {
-  await OneSignal.init({
+OneSignalDeferred.push(function(OneSignal) {
+  OneSignal.init({
     appId: "9fff8ba1-a3f9-45b6-b38c-d141ab4617eb",
-    notifyButton:{ enable:false }
+    notifyButton: { enable: false }
   });
 });
 </script>
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
 <style>
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:system-ui, Arial;
-  background:#f2f4f8;
-}
-
-/* Header */
+body{margin:0;font-family:Arial;background:#f4f6f9}
 header{
-  background:linear-gradient(135deg,#1976d2,#0d47a1);
-  color:#fff;
-  padding:16px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  box-shadow:0 4px 12px rgba(0,0,0,.2);
+  background:#1976d2;color:#fff;padding:16px;
+  display:flex;justify-content:space-between;align-items:center
 }
-header h1{margin:0;font-size:20px}
-.bell{
-  font-size:24px;
-  cursor:pointer;
+button{
+  padding:14px 18px;
+  background:#ff9800;
+  border:none;border-radius:10px;
+  font-size:16px;font-weight:bold;
+  cursor:pointer;color:#000
 }
-
-/* Subscribe Modal */
-#subModal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
+#form{
   display:none;
-  justify-content:center;
-  align-items:center;
-  z-index:10000;
-}
-#subModal .box{
   background:#fff;
-  padding:20px;
-  border-radius:16px;
-  width:90%;
-  max-width:330px;
-  animation:pop .3s ease;
+  margin:20px;
+  padding:16px;
+  border-radius:14px;
+  box-shadow:0 8px 20px rgba(0,0,0,.15)
 }
-@keyframes pop{
-  from{transform:scale(.9);opacity:0}
-  to{transform:scale(1);opacity:1}
-}
-#subModal input{
+input{
   width:100%;
   padding:12px;
   margin-bottom:12px;
-  border-radius:10px;
-  border:1px solid #ccc;
-  font-size:15px;
-}
-#subModal button{
-  width:100%;
-  padding:14px;
-  background:#1976d2;
-  color:#fff;
-  border:none;
-  border-radius:10px;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-}
-
-/* Offer Card */
-.offer{
-  background:#fff;
-  margin:16px;
-  border-radius:18px;
-  overflow:hidden;
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
-}
-.offer img{
-  width:100%;
-  height:260px;
-  object-fit:cover;
-  cursor:pointer;
-}
-.offer .content{
-  padding:16px;
-}
-.timer{
-  background:#eef1f5;
-  padding:10px;
-  border-radius:10px;
-  text-align:center;
-  font-weight:bold;
-  margin:12px 0;
-}
-.btn{
-  display:block;
-  background:#25d366;
-  color:#fff;
-  text-align:center;
-  padding:14px;
-  text-decoration:none;
-  border-radius:10px;
-  font-weight:bold;
-}
-
-/* Image Viewer */
-#imgViewer{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.9);
-  display:none;
-  justify-content:center;
-  align-items:center;
-  z-index:20000;
-}
-#imgViewer img{
-  max-width:95%;
-  max-height:95%;
-  border-radius:10px;
-}
-#imgViewer span{
-  position:absolute;
-  top:20px;
-  left:20px;
-  font-size:26px;
-  color:#fff;
-  cursor:pointer;
+  border-radius:8px;
+  border:1px solid #ccc
 }
 </style>
 </head>
@@ -152,102 +51,60 @@ header h1{margin:0;font-size:20px}
 <body>
 
 <header>
-  <h1>🔥 أحدث العروض</h1>
-  <div class="bell" onclick="openSub()">🔔</div>
+  <h3>🔥 العروض</h3>
+  <button onclick="subscribe()">🔔 اشترك</button>
 </header>
 
-<!-- Subscribe Modal -->
-<div id="subModal">
-  <div class="box">
-    <input id="subName" placeholder="الاسم">
-    <input id="subPhone" placeholder="رقم الموبايل">
-    <button onclick="subscribe()">اشترك في الإشعارات</button>
-  </div>
+<div id="form">
+  <input id="name" placeholder="الاسم">
+  <input id="phone" placeholder="رقم الموبايل">
+  <button onclick="saveData()">حفظ</button>
 </div>
-
-<!-- Image Viewer -->
-<div id="imgViewer" onclick="closeImg()">
-  <span>✕</span>
-  <img id="bigImg">
-</div>
-
-<div id="offers"></div>
 
 <script>
-/* Firebase */
-firebase.initializeApp({
-  apiKey:"AIzaSyBwMv6b3Pd6Xjn5Nu4Q4RFV_XFR_6BSsoM",
-  databaseURL:"https://na3ma-customers-default-rtdb.firebaseio.com"
+let osReady = false;
+
+OneSignalDeferred.push(function(OneSignal){
+  osReady = true;
 });
-const db = firebase.database();
-let whatsapp="";
-
-/* WhatsApp */
-db.ref("settings/whatsapp").on("value",s=>whatsapp=s.val()||"");
-
-/* Offers */
-db.ref("offers").on("value",snap=>{
-  offers.innerHTML="";
-  snap.forEach(c=>{
-    const o=c.val();
-    const end=new Date(o.end).getTime();
-    const div=document.createElement("div");
-    div.className="offer";
-    div.innerHTML=`
-      <img src="${o.image}" onclick="viewImg(this.src)">
-      <div class="content">
-        <h3>${o.title||""}</h3>
-        <p>${o.desc||""}</p>
-        <div class="timer" id="t_${c.key}"></div>
-        <a class="btn" target="_blank"
-           href="https://wa.me/${whatsapp}?text=${encodeURIComponent(o.desc)}">
-           طلب العرض
-        </a>
-      </div>`;
-    offers.appendChild(div);
-
-    setInterval(()=>{
-      let d=end-Date.now();
-      const t=document.getElementById("t_"+c.key);
-      if(d<=0){t.innerText="انتهى العرض";return;}
-      t.innerText=
-        Math.floor(d/86400000)+" يوم "+
-        Math.floor(d%86400000/3600000)+" ساعة "+
-        Math.floor(d%3600000/60000)+" دقيقة "+
-        Math.floor(d%60000/1000)+" ثانية";
-    },1000);
-  });
-});
-
-/* Subscribe */
-function openSub(){
-  subModal.style.display="flex";
-}
 
 function subscribe(){
-  const name=subName.value.trim();
-  const phone=subPhone.value.trim();
-  if(!name||!phone){alert("أدخل البيانات");return;}
+  if(!osReady){alert("OneSignal لم يجهز بعد");return;}
 
-  OneSignalDeferred.push(async function(OneSignal){
-    await OneSignal.showSlidedownPrompt(); // 👈 لازم مباشرة من الزر
-    const perm=await OneSignal.Notifications.permission;
-    if(perm!=="granted"){alert("يجب السماح بالإشعارات");return;}
-    await OneSignal.sendTag("name",name);
-    await OneSignal.sendTag("phone",phone);
-    await OneSignal.sendTag("subscribed","yes");
-    subModal.style.display="none";
-    alert("تم الاشتراك بنجاح 🔔");
+  // 🚨 الطلب المباشر الوحيد
+  OneSignalDeferred.push(function(OneSignal){
+    OneSignal.showSlidedownPrompt();
+  });
+
+  // ننتظر الموافقة فقط (بدون async)
+  setTimeout(checkPermission, 1500);
+}
+
+function checkPermission(){
+  OneSignalDeferred.push(function(OneSignal){
+    OneSignal.Notifications.permission.then(function(p){
+      if(p === "granted"){
+        document.getElementById("form").style.display="block";
+      }else{
+        alert("يجب السماح بالإشعارات");
+      }
+    });
   });
 }
 
-/* Image */
-function viewImg(src){
-  bigImg.src=src;
-  imgViewer.style.display="flex";
-}
-function closeImg(){
-  imgViewer.style.display="none";
+function saveData(){
+  const name=document.getElementById("name").value;
+  const phone=document.getElementById("phone").value;
+  if(!name||!phone){alert("أدخل البيانات");return;}
+
+  OneSignalDeferred.push(function(OneSignal){
+    OneSignal.sendTag("name",name);
+    OneSignal.sendTag("phone",phone);
+    OneSignal.sendTag("subscribed","yes");
+  });
+
+  alert("تم الاشتراك بنجاح ✅");
+  document.getElementById("form").style.display="none";
 }
 </script>
 
