--- a/index.html
+++ b/index.html
@@ -2,168 +2,135 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>العروض</title>
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-
-<!-- OneSignal (الطريقة القديمة) -->
-<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
-<script>
-window.OneSignalDeferred = window.OneSignalDeferred || [];
-OneSignalDeferred.push(async function(OneSignal) {
-  await OneSignal.init({
-    appId: "9fff8ba1-a3f9-45b6-b38c-d141ab4617eb",
-    notifyButton: { enable: true }
-  });
-});
-</script>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>عرض العروض - Customers Offers</title>
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body{
-  margin:0;
-  font-family:"Segoe UI",Tahoma;
-  background:#f2f4f7;
-}
-header{
-  background:#0d47a1;
-  color:#fff;
-  padding:20px;
-  text-align:center;
-}
-.container{
-  padding:16px;
-}
-.card{
-  background:#fff;
-  border-radius:18px;
-  overflow:hidden;
-  box-shadow:0 8px 20px rgba(0,0,0,.12);
-  margin-bottom:20px;
-}
-.card img{
-  width:100%;
-  cursor:pointer;
-}
-.card .content{
-  padding:16px;
-}
-.card h3{
-  margin:0 0 8px;
-}
-.timer{
-  color:#d32f2f;
-  font-weight:bold;
-  margin:10px 0;
-}
-.btn{
-  width:100%;
-  padding:14px;
-  background:#25d366;
-  border:none;
-  border-radius:12px;
-  font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
-}
-#viewer{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.8);
-  display:none;
-  justify-content:center;
-  align-items:center;
-  z-index:9999;
-}
-#viewer img{
-  max-width:95%;
-  max-height:95%;
-  border-radius:12px;
-}
+    body {
+        font-family: 'Cairo', sans-serif;
+        background: #f5f5f7;
+        margin: 0;
+        padding: 0;
+    }
+    header {
+        background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+        font-size: 2em;
+        font-weight: bold;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+    .container {
+        max-width: 1200px;
+        margin: 40px auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        gap: 30px;
+        padding: 0 20px;
+    }
+    .offer-card {
+        background: #fff;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .offer-card:hover {
+        transform: translateY(-10px);
+        box-shadow: 0 12px 25px rgba(0,0,0,0.25);
+    }
+    .offer-card img {
+        width: 100%;
+        height: 220px;
+        object-fit: cover;
+    }
+    .offer-content {
+        padding: 20px;
+    }
+    .offer-desc {
+        font-size: 1.1em;
+        margin-bottom: 15px;
+        color: #333;
+    }
+    .offer-dates {
+        font-size: 0.9em;
+        color: #666;
+        margin-bottom: 15px;
+    }
+    .offer-button {
+        display: inline-block;
+        padding: 12px 20px;
+        background: #ff7e5f;
+        background: linear-gradient(90deg, #ff7e5f, #feb47b);
+        color: #fff;
+        border-radius: 50px;
+        text-decoration: none;
+        font-weight: bold;
+        transition: background 0.3s, transform 0.3s;
+    }
+    .offer-button:hover {
+        background: linear-gradient(90deg, #feb47b, #ff7e5f);
+        transform: scale(1.05);
+    }
 </style>
 </head>
-
 <body>
 
-<header>
-  <h2>🔥 أحدث العروض</h2>
-  <p>فعّل الإشعارات ليصلك كل جديد</p>
-</header>
-
-<div class="container" id="offers"></div>
-
-<div id="viewer" onclick="this.style.display='none'">
-  <img id="viewerImg">
+<header>عروض العملاء - Customers Offers</header>
+<div class="container" id="offersContainer">
+    <!-- العروض سيتم إضافتها هنا ديناميكياً -->
 </div>
 
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <script>
-/* Firebase config */
-firebase.initializeApp({
-  apiKey: "AIzaSyBwMv6b3Pd6Xjn5Nu4Q4RFV_XFR_6BSsoM",
-  databaseURL: "https://na3ma-customers-default-rtdb.firebaseio.com"
-});
-const db = firebase.database();
+  // إعداد Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyXXXXXX", // ضع هنا مفاتيحك الخاصة
+    authDomain: "na3ma-customers.firebaseapp.com",
+    databaseURL: "https://na3ma-customers-default-rtdb.firebaseio.com",
+    projectId: "na3ma-customers",
+    storageBucket: "na3ma-customers.appspot.com",
+    messagingSenderId: "XXXXXX",
+    appId: "1:XXXX:web:XXXX"
+  };
 
-let WHATSAPP = "";
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-/* جلب رقم الواتساب */
-db.ref("settings/whatsapp").on("value", s=>{
-  WHATSAPP = s.val();
-});
+  const offersContainer = document.getElementById('offersContainer');
 
-/* جلب العروض */
-db.ref("offers").on("value", snap=>{
-  const box = document.getElementById("offers");
-  box.innerHTML = "";
-  snap.forEach(child=>{
-    const d = child.val();
-    box.innerHTML += `
-      <div class="card">
-        <img src="${d.image}" onclick="viewImage('${d.image}')">
-        <div class="content">
-          <h3>${d.title}</h3>
-          <p>${d.desc}</p>
-          <div class="timer" id="t${child.key}"></div>
-          <button class="btn" onclick="order('${d.title}')">
-            🟢 طلب العرض
-          </button>
-        </div>
-      </div>
-    `;
-    countdown(d.end, "t"+child.key);
+  // جلب رقم الواتساب من settings
+  let whatsappNumber = '';
+  db.ref('settings').once('value').then(snapshot => {
+    whatsappNumber = snapshot.val()?.whatsapp || '01000000000';
   });
-});
 
-/* عد تنازلي */
-function countdown(end,id){
-  setInterval(()=>{
-    const diff = new Date(end) - new Date();
-    if(diff<=0){
-      document.getElementById(id).innerText="انتهى العرض";
-      return;
-    }
-    const d=Math.floor(diff/86400000);
-    const h=Math.floor(diff%86400000/3600000);
-    const m=Math.floor(diff%3600000/60000);
-    const s=Math.floor(diff%60000/1000);
-    document.getElementById(id).innerText=
-      `⏳ ${d}ي ${h}س ${m}د ${s}ث`;
-  },1000);
-}
+  // جلب العروض وعرضها
+  db.ref('offers').orderByChild('createdAt').once('value').then(snapshot => {
+    const offers = [];
+    snapshot.forEach(child => {
+      offers.push({ id: child.key, ...child.val() });
+    });
 
-/* طلب العرض */
-function order(title){
-  const msg = encodeURIComponent("أرغب في عرض: "+title);
-  window.open(`https://wa.me/${WHATSAPP}?text=${msg}`);
-}
+    // ترتيب تنازلي
+    offers.sort((a,b) => b.createdAt - a.createdAt);
 
-/* عرض الصورة كاملة */
-function viewImage(src){
-  document.getElementById("viewerImg").src=src;
-  document.getElementById("viewer").style.display="flex";
-}
+    offers.forEach(offer => {
+      const offerCard = document.createElement('div');
+      offerCard.className = 'offer-card';
+      offerCard.innerHTML = `
+        <img src="${offer.image}" alt="Offer Image">
+        <div class="offer-content">
+            <div class="offer-desc">${offer.desc}</div>
+            <div class="offer-dates">تبدأ: ${new Date(offer.start).toLocaleDateString('ar-EG')} | تنتهي: ${new Date(offer.end).toLocaleDateString('ar-EG')}</div>
+            <a class="offer-button" href="https://wa.me/${whatsappNumber}?text=أريد طلب العرض: ${encodeURIComponent(offer.desc)}" target="_blank">طلب العرض</a>
+        </div>
+      `;
+      offersContainer.appendChild(offerCard);
+    });
+  });
 </script>
 
 </body>
