--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>عرض العروض - Customers Offers</title>
+<title>عروض العملاء - Customers Offers</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
         font-family: 'Cairo', sans-serif;
-        background: #f5f5f7;
+        background: #1a1a1a;
         margin: 0;
         padding: 0;
-    }
-    header {
-        background: linear-gradient(90deg, #6a11cb 0%, #2575fc 100%);
         color: #fff;
-        padding: 20px;
-        text-align: center;
-        font-size: 2em;
-        font-weight: bold;
-        box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
+
+    header {
+        background: linear-gradient(90deg, #8e2de2 0%, #4a00e0 100%);
+        color: #fff;
+        padding: 25px;
+        text-align: center;
+        font-size: 2.2em;
+        font-weight: bold;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    }
+
     .container {
         max-width: 1200px;
         margin: 40px auto;
@@ -29,49 +32,76 @@
         gap: 30px;
         padding: 0 20px;
     }
+
     .offer-card {
-        background: #fff;
-        border-radius: 15px;
+        background: linear-gradient(145deg, #2c2c54, #1c1c2c);
+        border-radius: 20px;
         overflow: hidden;
-        box-shadow: 0 8px 20px rgba(0,0,0,0.15);
-        transition: transform 0.3s, box-shadow 0.3s;
+        box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        transition: transform 0.5s, box-shadow 0.5s;
+        transform-style: preserve-3d;
+        opacity: 0;
+        transform: translateY(50px) rotateX(10deg);
+        animation: fadeInUp 0.8s forwards;
     }
+
     .offer-card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 12px 25px rgba(0,0,0,0.25);
+        transform: translateY(-10px) rotateX(0deg) scale(1.05);
+        box-shadow: 0 20px 40px rgba(0,0,0,0.7);
     }
+
     .offer-card img {
         width: 100%;
         height: 220px;
         object-fit: cover;
+        border-bottom: 1px solid rgba(255,255,255,0.1);
+        transition: transform 0.5s;
     }
+
+    .offer-card:hover img {
+        transform: scale(1.05);
+    }
+
     .offer-content {
         padding: 20px;
     }
+
     .offer-desc {
         font-size: 1.1em;
         margin-bottom: 15px;
-        color: #333;
+        color: #f0f0f0;
+        line-height: 1.5;
     }
+
     .offer-dates {
         font-size: 0.9em;
-        color: #666;
+        color: #ccc;
         margin-bottom: 15px;
     }
+
     .offer-button {
         display: inline-block;
-        padding: 12px 20px;
-        background: #ff7e5f;
-        background: linear-gradient(90deg, #ff7e5f, #feb47b);
+        padding: 12px 25px;
+        background: linear-gradient(90deg, #ff416c, #ff4b2b);
         color: #fff;
         border-radius: 50px;
         text-decoration: none;
         font-weight: bold;
-        transition: background 0.3s, transform 0.3s;
+        box-shadow: 0 5px 15px rgba(255,75,43,0.5);
+        transition: background 0.3s, transform 0.3s, box-shadow 0.3s;
     }
+
     .offer-button:hover {
-        background: linear-gradient(90deg, #feb47b, #ff7e5f);
-        transform: scale(1.05);
+        background: linear-gradient(90deg, #ff4b2b, #ff416c);
+        transform: scale(1.08);
+        box-shadow: 0 8px 20px rgba(255,75,43,0.7);
+    }
+
+    @keyframes fadeInUp {
+        to {
+            opacity: 1;
+            transform: translateY(0) rotateX(0deg);
+        }
     }
 </style>
 </head>
@@ -114,12 +144,13 @@
       offers.push({ id: child.key, ...child.val() });
     });
 
-    // ترتيب تنازلي
+    // ترتيب تنازلي حسب createdAt
     offers.sort((a,b) => b.createdAt - a.createdAt);
 
-    offers.forEach(offer => {
+    offers.forEach((offer, index) => {
       const offerCard = document.createElement('div');
       offerCard.className = 'offer-card';
+      offerCard.style.animationDelay = `${index * 0.1}s`; // تأثير متدرج
       offerCard.innerHTML = `
         <img src="${offer.image}" alt="Offer Image">
         <div class="offer-content">
