--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 <body>
 
-<header>عروض العملاء - Customers Offers</header>
+<header>Customers Offers</header>
 <div class="container" id="offersContainer">
     <!-- العروض سيتم إضافتها هنا ديناميكياً -->
 </div>
