--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title> Customers Offers</title>
+<title>عروض العملاء - Customers Offers</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
@@ -22,6 +22,23 @@
         font-size: 2.2em;
         font-weight: bold;
         box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+        overflow: hidden;
+        position: relative;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #header-title {
+        white-space: nowrap;
+        position: absolute;
+        animation: slideHeader 0.5s ease forwards;
+    }
+
+    @keyframes slideHeader {
+        from {opacity: 0; transform: translateY(-50%);}
+        to {opacity: 1; transform: translateY(0);}
     }
 
     .container {
@@ -56,6 +73,7 @@
         height: 220px;
         object-fit: cover;
         border-bottom: 1px solid rgba(255,255,255,0.1);
+        cursor: pointer;
         transition: transform 0.5s;
     }
 
@@ -85,10 +103,12 @@
         background: rgba(255,255,255,0.05);
         padding: 8px 12px;
         border-radius: 10px;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         display: flex;
         justify-content: space-between;
         text-align: center;
+        flex-wrap: wrap;
+        gap: 5px;
     }
 
     .countdown span {
@@ -131,27 +151,64 @@
         box-shadow: 0 8px 20px rgba(255,75,43,0.7);
     }
 
+    .alert-ending {
+        background: #ff4b2b;
+        color: #fff;
+        padding: 8px 12px;
+        border-radius: 12px;
+        font-weight: bold;
+        margin-bottom: 10px;
+        text-align: center;
+        animation: pulse 1s infinite;
+    }
+
     @keyframes fadeInUp {
         to {
             opacity: 1;
             transform: translateY(0) rotateX(0deg);
         }
     }
+
+    @keyframes pulse {
+        0%, 100% {opacity: 1;}
+        50% {opacity: 0.6;}
+    }
+
+    /* Lightbox */
+    #lightbox {
+        position: fixed;
+        display: none;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        background: rgba(0,0,0,0.9);
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+
+    #lightbox img {
+        max-width: 90%;
+        max-height: 90%;
+        border-radius: 15px;
+        box-shadow: 0 0 20px rgba(255,255,255,0.5);
+    }
 </style>
 </head>
 <body>
 
-<header>Customers Offers</header>
-<div class="container" id="offersContainer">
-    <!-- العروض سيتم إضافتها هنا ديناميكياً -->
+<header><div id="header-title">عروض العملاء - Customers Offers</div></header>
+<div class="container" id="offersContainer"></div>
+
+<!-- Lightbox -->
+<div id="lightbox" onclick="this.style.display='none'">
+    <img id="lightbox-img" src="">
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 <script>
-  // إعداد Firebase
   const firebaseConfig = {
-    apiKey: "AIzaSyXXXXXX", // ضع هنا مفاتيحك الخاصة
+    apiKey: "AIzaSyXXXXXX",
     authDomain: "na3ma-customers.firebaseapp.com",
     databaseURL: "https://na3ma-customers-default-rtdb.firebaseio.com",
     projectId: "na3ma-customers",
@@ -164,6 +221,28 @@
   const db = firebase.database();
 
   const offersContainer = document.getElementById('offersContainer');
+  const headerTitle = document.getElementById('header-title');
+
+  // جلب العناوين للـ Header
+  let headerTitles = [];
+  db.ref('teteal').once('value').then(snapshot => {
+      snapshot.forEach(child => {
+          if(child.val()?.title) headerTitles.push(child.val().title);
+      });
+      if(headerTitles.length > 0) animateHeader();
+  });
+
+  function animateHeader(){
+      let index = 0;
+      setInterval(() => {
+          headerTitle.style.opacity = 0;
+          setTimeout(() => {
+              headerTitle.textContent = headerTitles[index];
+              headerTitle.style.opacity = 1;
+              index = (index + 1) % headerTitles.length;
+          }, 500);
+      }, 4000); // تغيير كل 4 ثوانٍ
+  }
 
   // جلب رقم الواتساب من settings
   let whatsappNumber = '';
@@ -186,7 +265,7 @@
       offerCard.style.animationDelay = `${index * 0.1}s`;
 
       offerCard.innerHTML = `
-        <img src="${offer.image}" alt="Offer Image">
+        <img src="${offer.image}" alt="Offer Image" onclick="openLightbox('${offer.image}')">
         <div class="offer-content">
             <div class="offer-desc">${offer.desc}</div>
             <div class="offer-dates">تبدأ: ${new Date(offer.start).toLocaleDateString('ar-EG')} | تنتهي: ${new Date(offer.end).toLocaleDateString('ar-EG')}</div>
@@ -205,7 +284,6 @@
 
       offersContainer.appendChild(offerCard);
 
-      // تفعيل العد التنازلي
       const countdownEl = document.getElementById(`countdown-${offer.id}`);
       const daysEl = document.getElementById(`days-${offer.id}`);
       const hoursEl = document.getElementById(`hours-${offer.id}`);
@@ -223,7 +301,7 @@
 
           if(distance <= 0){
               clearInterval(interval);
-              offerCard.remove(); // إزالة العرض عند انتهاء الوقت
+              offerCard.remove();
               return;
           }
 
@@ -237,14 +315,27 @@
           minutesEl.textContent = minutes;
           secondsEl.textContent = seconds;
 
-          // تحديث progress bar
           let elapsed = now - startTime;
           let progress = (elapsed / totalDuration) * 100;
           progressEl.style.width = `${progress}%`;
 
+          if(distance < 24 * 60 * 60 * 1000 && !offerCard.querySelector('.alert-ending')){
+              const alertDiv = document.createElement('div');
+              alertDiv.className = 'alert-ending';
+              alertDiv.textContent = '⚠️ العرض سينتهي خلال 24 ساعة!';
+              countdownEl.before(alertDiv);
+          }
+
       }, 1000);
     });
   });
+
+  function openLightbox(src){
+      const lightbox = document.getElementById('lightbox');
+      const img = document.getElementById('lightbox-img');
+      img.src = src;
+      lightbox.style.display = 'flex';
+  }
 </script>
 
 </body>
